syntax = "proto3";

option csharp_namespace = "CollabApp.Server.Protos";

package auth;

service AuthService {
	rpc Register(RegisterRequest) returns (AuthReply);
	rpc Login(LoginRequest) returns (AuthReply);
}

message RegisterRequest {
	string username = 1;
	string password = 2;
}

message LoginRequest {
	string username = 1;
	string password = 2;
}

message AuthReply {
	string token = 1;
	string message = 2;
}